# codecraft

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run.py  tasks.py
app/: __init__.py  config.py  db.py  main.py
app/alembic/: env.py  migration_file.py
app/api/: deps.py  user.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  catalogs.py  categories.py  login.py  (+2 more)
app/core/: config.py  security.py
app/crud/: __init__py  base.py  product.py  user.py
app/db/: base.py  session.py
app/models/: __init__.py  cart_items.py  catalogs.py  categories.py  category_photo.py  order.py  order_items.py  orders.py  product_features.py  product_photo.py  product_video.py  products.py  reviews.py  user.py  users.py
app/routes/: submissions.py
app/schemas/: __init__.py  catalog_schema.py  category_schema.py  comment.py  feature_schema.py  photo_schema.py  product.py  product_schema.py  review.py  user.py  user_schema.py  video_schema.py
app/services/: product_service.py  user.py
app/tasks/: celery_worker.py
app/tests/: conftest.py
app/tests/api/: test_products.py  test_users.py
app/utils/: code_runner.py
migrations/: env.py
migrations/versions/: 17243ac5687a_update_models.py  3db41846c219_update_models.py  46c1f78b24b5_add_reviews_relationship_to_product.py  50d30a65e8cc_comment_delete.py  792c356ca09c_update_models.py  e34b9a4fcb16_base_migration.py  e58e7369efae_update_user_product_relationships.py  f7dd67bf5f60_add_categories_relationship_to_catalog.py  f90e5c62cb9e_update_comment_model.py
